Changelog next version
----------------------
* spring-mock-mvc module now supports Spring 7.x
* spring-web-test-client now supports Spring 7.x
* Upgraded commons-lang3 from 3.18.0 to 3.19.0
* The spring modules now required Spring 5.3+ (previously 5.1 was required)
* New minimum Java baseline is now 17
* New minimum Groovy base is now 5.x
* Support for Jackson 3 object mapping
*  Migrate json-path fully to Java, bypass GroovyShell for evaluation (#1844) (thanks to Michael Edgar for PR)
    - This fixed some nasty memory leaks when using JsonPath heavily in long running processes
* Stop resetting ResponseParserRegistrar during build (#1759, #1505, #1207 & #978) (thanks to Marc Easen for PR)
* Skip Null filters in FilterContextImpl (#1834) (thanks to Boyarshinov Alexander for PR)

Changelog 5.5.6 (2025-08-15)
----------------------------
* Remove deprecated constructors in multipart handling (#1827) (thanks to Tobias Unger for PR)
* Fix NPE in RequestSpecificationImpl #1830 (thanks to Boyarshinov Alexander for PR)
* Bump commons-lang3 from 3.16.0 to 3.18.0 (thanks to Ash Skelton for PR)

Changelog 5.5.5 (2025-05-22)
---------------------------
* The rest-assured-bom project is back and works

Changelog 5.5.4 (2025-05-22)
---------------------------
* The rest-assured-bom project is back

Changelog 5.5.3 (2025-05-22)
---------------------------
* Greatly improved csrf support. When applying csrf, it'll automatically forward the cookies to returns from the GET request to the csrf token and apply it to the actual request. These cookies will also be applied to the CookieFilter automatically (if configured) and SessionFilter (if configured). For example:
        given().
            csrf("/login").
            formParam("name", "My New Name").
        when().
            post("/users/123").
        then().
            statusCode(200);

    Now the cookies returned from the GET request to login will be automatically applied to the POST to "/users/123".
