@@ -15,9 +15,9 @@
  */
 package io.restassured.path.json.mapper.factory;
 
+import jakarta.json.bind.Jsonb;
 import org.eclipse.yasson.JsonBindingProvider;
 
-import javax.json.bind.Jsonb;
 import java.lang.reflect.Type;
 
 public class DefaultYassonObjectMapperFactory implements JsonbObjectMapperFactory {
