@@ -17,8 +17,8 @@
 package io.restassured.path.json.mapper.factory;
 
 import io.restassured.common.mapper.factory.ObjectMapperFactory;
+import jakarta.json.bind.Jsonb;
 
-import javax.json.bind.Jsonb;
 
 /**
  * Interface for JSON-B object mappers. Implement this class and register it to the ObjectMapperConfig if you
