@@ -63,8 +63,8 @@
         <jackson2.version>2.17.1</jackson2.version>
         <jackson3.version>3.0.2</jackson3.version>
         <johnzon.version>1.1.11</johnzon.version>
-        <yasson.version>1.0.6</yasson.version>
-        <jakarta.json.version>1.1.6</jakarta.json.version>
+        <yasson.version>3.0.4</yasson.version>
+        <jakarta.json.version>2.1.3</jakarta.json.version>
         <maven-javadoc.version>3.5.0</maven-javadoc.version>
         <surefire.version>3.5.4</surefire.version>
         <kotlin.version>2.2.20</kotlin.version>
